ss/retrieveUnpackaged/objects/Entity__c.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schema_Name__c</fullName>
        <label>Schema Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Name__c</fullName>
        <label>Table Name</label>
        <length>127</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_regex</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Name__c, &apos;^\\w+$&apos;)</errorConditionFormula>
        <errorMessage>Field &apos;Entity Name&apos; can include just leters and numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schema_name_regex</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Schema_Name__c, &apos;^\\w+$&apos;)</errorConditionFormula>
        <errorMessage>Field &apos;Schema name&apos; can include just leters and numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Table_Name_regex</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Table_Name__c, &apos;^\\w+$&apos;)</errorConditionFormula>
        <errorMessage>Field &apos;Table name&apos; can include just leters and numbers</errorMessage>
    </validationRules>
</CustomObject>